--- a/404.html
+++ b/404.html
@@ -4,22 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- icon -->
-        <link rel="icon" type="image/x-icon" href="./site-assets/assets/logo/CitoHubIcon.png">
+        <link rel="icon" type="image/x-icon" href="/speingcode/site-assets/assets/logo/CitoHubIcon.png">
         <title id="site-title">SpeingCodeEditor</title>
         <meta name="description" content="A web app that makes it easy to write code.">
         <!-- .webmanifest--> 
         <meta name="theme-color" content="#1a1a1a"/>
-        <link rel="manifest" href="./site-assets/manifest/webmanifest.json" />
+        <link rel="manifest" href="/speingcode/site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
-        <link rel="stylesheet" href="./site-assets/css/header.css" />
+        <link rel="stylesheet" href="/speingcode/site-assets/css/header.css" />
 
-        <link rel="stylesheet" href="./site-assets/css/A-animation.css" />
-        <link rel="stylesheet" href="./site-assets/css/A-main.css" />
-        <link rel="stylesheet" href="./site-assets/css/A-parts.css" />
+        <link rel="stylesheet" href="/speingcode/site-assets/css/A-animation.css" />
+        <link rel="stylesheet" href="/speingcode/site-assets/css/A-main.css" />
+        <link rel="stylesheet" href="/speingcode/site-assets/css/A-parts.css" />
         
-        <link rel="stylesheet" href="./site-assets/css/all.css" />
+        <link rel="stylesheet" href="/speingcode/site-assets/css/all.css" />
         <!-- JS -->
-        <script src="./site-assets/js/languageChange.js"></script>
+        <script src="/speingcode/site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <!-- code font for google-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,15 +35,15 @@
             <div>
                 <div class="header-leftArea">
                     <div id="logoFxnxa" class="logo--Fxnxa header-site-logo-area">
-                        <a href="./" aria-label="citohub-icon">
-                            <img id="citohub-icon" style="width: 50px; height: 50px;" src="./site-assets/assets/logo/CitoHubIcon.png" alt="logo">
+                        <a href="/speingcode/" aria-label="citohub-icon">
+                            <img id="citohub-icon" style="width: 50px; height: 50px;" src="/speingcode/site-assets/assets/logo/CitoHubIcon.png" alt="logo">
                         </a>
                     </div>
                     <div class="site-title-text"><strong style="font-weight: bold; font-size: 18px;">Speing</strong></div>                    
                 </div>
                 <div class="mobileSearch--WI2Tv"></div>
                 <div class="LeftCen">
-                    <a href="./" aria-label="Discussions"><div class="LeftCenItem animeSreddtUpfadeIn"><i class="fa-solid fa-bell" style="font-size: 20px;"></i></div></a>
+                    <a href="/speingcode/" aria-label="Discussions"><div class="LeftCenItem animeSreddtUpfadeIn"><i class="fa-solid fa-bell" style="font-size: 20px;"></i></div></a>
                     <div class="LeftCenItem animeSreddtUpfadeIn"><i id="languageChange" class="fa-solid fa-earth-asia" style="font-size: 20px;" onclick="languageChangeBtn()"></i></div>
                 </div>
                 <div class="languageListBox">
@@ -87,8 +87,8 @@
         </header>
         <main>
             <div class="legacy-container">
-                <a class="tool-card topCard1" href="./">
-                    <img src="./site-assets/assets/logo/CitoHubIcon.png" alt="logo">
+                <a class="tool-card topCard1" href="/speingcode/">
+                    <img src="/speingcode/site-assets/assets/logo/CitoHubIcon.png" alt="logo">
                     <div glot-model="">
                         <h3 class="text-\[1\.17em\]">
                             404 - SpeingCodeEditor
@@ -98,13 +98,13 @@
                 <div class="card-group animeSreddtUpfadeIn">
                     <div class="card-column">
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="./tools/">
+                            <a class="tool-card text-\[1\.17em\]" href="/speingcode/tools/">
                                 <h3 glot-model="Popular+Tools">
                                     Popular Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card" href="./tools/editor/webmanifest/">
+                                <a class="tool-card" href="/speingcode/tools/editor/webmanifest/">
                                     <div class="badges-list">
                                         <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
                                             Pre-Alpha
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="./changelog/">
+                            <a class="tool-card text-\[1\.17em\]" href="/speingcode/changelog/">
                                 <h3>
                                     <div glot-model="changelog">changelog</div>
                                     <i class="fa-solid fa-chart-simple"></i>
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="./versions/">
+                            <a class="tool-card text-\[1\.17em\]" href="/speingcode/versions/">
                                 <h3>
                                     <div glot-model="Versions">Versions</div>
                                     <i class="fa-solid fa-bars"></i>
@@ -190,20 +190,11 @@
                     </div>
                     <div class="card-column">
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="./under-development/">
+                            <a class="tool-card text-\[1\.17em\]" href="/speingcode/under-development/">
                                 <h3 glot-model="Under+development">Under development</h3>
                             </a>
-                            <!--
                             <div class="tool-body">
-                                <a class="tool-card" href="#">
-                                    <h3 class="text-\[1\.17em\]" glot-model="Site+system">
-                                        Site system
-                                    </h3>
-                                </a>
-                            </div>
-                            -->
-                            <div class="tool-body">
-                                <a href="./under-development/pages/9ead758a-fb37-4b55-bd9f-df282cd58495/" style="text-decoration: none;">
+                                <a href="/speingcode/under-development/pages/9ead758a-fb37-4b55-bd9f-df282cd58495/" style="text-decoration: none;">
                                     <div class="card" id="9ead758a-fb37-4b55-bd9f-df282cd58495">
                                         <div class="card-content">
                                             <div class="badges-list">
@@ -220,7 +211,7 @@
                                         </div>
                                     </div>                                    
                                 </a>
-                                <a href="./under-development/pages/a2296206-25b7-4938-9584-84b6587149b5/" style="text-decoration: none;">
+                                <a href="/speingcode/under-development/pages/a2296206-25b7-4938-9584-84b6587149b5/" style="text-decoration: none;">
                                     <div class="card" id="a2296206-25b7-4938-9584-84b6587149b5">
                                         <div class="card-content">
                                             <div class="badges-list">
@@ -240,14 +231,14 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card" href="./whats-new/">
+                            <a class="tool-card" href="/speingcode/whats-new/">
                                 <h3 class="text-\[1\.17em\]">
                                     <div glot-model="What's+new">What's new</div>
                                     <i class="fa-solid fa-bullhorn"></i>
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="card" href="./whats-new/" glot-model="The+website+program+has+been+updated.">
+                                <a class="card" href="/speingcode/whats-new/" glot-model="The+website+program+has+been+updated.">
                                     <div class="card-content">The website program has been updated.</div>
                                 </a>
                             </div>
@@ -268,13 +259,13 @@
                             </div>
                         </div>
                         <div class="tool-group">
-                            <a class="tool-card text-\[1\.17em\]" href="./tools/">
+                            <a class="tool-card text-\[1\.17em\]" href="/speingcode/tools/">
                                 <h3 glot-model="Tools">
                                     Tools
                                 </h3>
                             </a>
                             <div class="tool-body">
-                                <a class="tool-card" href="./tools/editor/webmanifest/">
+                                <a class="tool-card" href="/speingcode/tools/editor/webmanifest/">
                                     <div class="badges-list">
                                         <div class="badge" style="--tint: -150;" glot-model="Pre-Alpha">
                                             Pre-Alpha
@@ -350,7 +341,7 @@
             if(obj !== ""){ //クッキーにデータがあるか
                 let jsonLang = obj.lang;
                 if(jsonLang = ""){
-                    glot.import("./site-assets/json/glot-data.json").then(() => {
+                    glot.import("/speingcode/site-assets/json/glot-data.json").then(() => {
                         glot.render();
                     });
                     let rootElement = document.documentElement;
@@ -360,7 +351,7 @@
                     glot.render(jsonLang);
                 }
             }else{
-                glot.import("./site-assets/json/glot-data.json").then(() => {
+                glot.import("/speingcode/site-assets/json/glot-data.json").then(() => {
                     glot.render();
                 });
                 let rootElement = document.documentElement;
@@ -376,7 +367,7 @@
             // クッキーを読み出す
             const obj = convertCookieToObject(document.cookie);
             let jsonLang = obj.lang;
-            glot.import("./site-assets/json/glot-data.json").then(() => {
+            glot.import("/speingcode/site-assets/json/glot-data.json").then(() => {
                 glot.render(jsonLang);
                 setLangTextForm()
             });
