--- a/404.html
+++ b/404.html
@@ -12,15 +12,14 @@
         <link rel="manifest" href="/speingcode/site-assets/manifest/webmanifest.json" />
         <!-- CSS -->
         <link rel="stylesheet" href="/speingcode/site-assets/css/header.css" />
-
         <link rel="stylesheet" href="/speingcode/site-assets/css/A-animation.css" />
         <link rel="stylesheet" href="/speingcode/site-assets/css/A-main.css" />
         <link rel="stylesheet" href="/speingcode/site-assets/css/A-parts.css" />
-        
         <link rel="stylesheet" href="/speingcode/site-assets/css/all.css" />
         <!-- JS -->
         <script src="/speingcode/site-assets/js/languageChange.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="/speingcode/site-assets/js/post.js"></script>
         <!-- code font for google-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -296,20 +295,20 @@
                 </div>
                 <footer>
                     <p>
-                        <span>
-                            Developed by
-                            <a href="https://github.com/Fun117" target="_blank" class="link-decoration">Fun117</a>
-                        </span>
+                        <span>Developed by<a href="https://github.com/Fun117" target="_blank" class="link-decoration">Fun117</a></span>
                     </p>
-                    <p></p>
+                    <p style="margin: 0 0 0 0px;">
+                        <div id="button_action_like_box" class="heart-container" title="Love" style="width: 25px; height: 25px; margin: 0;"></div>
+                        <span style="height: 22px; margin: 0;">Love</span>
+                    </p>
                     <p>
-                        <i class="fa-brands fa-github" style="font-size: 20px;"></i>
-                        <span>Source code on <a href="https://github.com/Fun117/speingcode" target="_blank" rel="noreferrer" class="link-decoration">GitHub</a></span>
+                        <i class="fa-brands fa-github" style="font-size: 20px;"></i><span>Source code on <a href="https://github.com/Fun117/speingcode" target="_blank" rel="noreferrer" class="link-decoration">GitHub</a></span>
                     </p>
                 </footer>
             </div>
         </main>
     </body>
+    <script src="/speingcode/site-assets/js/action_button.js"></script>
     <!-- ページロードアニメーション-->
     <div id="js-loader" class="loader"></div>
     <script>
